--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -7,6 +7,7 @@ models:
         tests:
           - unique
           - not_null
+    
   - name: stg_orders
     columns:
       - name: order_id
@@ -17,5 +18,10 @@ models:
         tests:
           - accepted_values:
               values: ['shipped','completed','return_pending','returned','placed']
-
+      # adding the relationship test
+      - name: customer_id
+        tests:
+          - relationships:
+              to: ref('stg_customers')
+              field: customer_id
           
