simple documenting the project by adding description to stg_jaffle_shop.yaml file

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,15 +2,19 @@ version: 2
 
 models:
   - name: stg_customers
+    description: one unique customer per row
     columns:
       - name: customer_id
+        description: primary key for stage customers
         tests:
           - unique
           - not_null
     
   - name: stg_orders
+    description: one unique order per customer
     columns:
       - name: order_id
+        description: primary key for stage orders
         tests:
           - unique
           - not_null
