--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -19,7 +19,7 @@ models:
           - unique
           - not_null
       - name: status
-        description: "{{ doc{'order_status'}}"
+        description: "{{ doc('order_status')}}"
         tests:
           - accepted_values:
               values: ['shipped','completed','return_pending','returned','placed']
