--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,9 +33,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    # Applies to all files under models/example/
+    # Applies to all files under models/staging/
     staging:
       +materialized: view
+    # Applies to all files under models/marts/
     marts:
       +materialized: table
 
